--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html data-wf-page="605ba11a3c65b4832c34ab2d" data-wf-site="605ba1193c65b44e9f34ab13">
 <head>
   <meta charset="utf-8">
-  <title>ingenium - Webflow HTML website template</title>
+  <title>Marquis Whaley | About</title>
   <meta content="ingenium - Webflow HTML website template" name="description">
   <meta content="ingenium - Webflow HTML website template" property="og:title">
   <meta content="ingenium - Webflow HTML website template" property="og:description">
@@ -30,29 +30,25 @@
 </head>
 <body>
   <div class="wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="fixed-nav w-nav">
-      <div class="container nav-container w-container">
-        <a href="index.html" class="brand no-padding w-nav-brand">
-          <div class="brand-pic black"></div>
+  <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="fixed-nav w-nav">
+    <div class="container nav-container w-container">
+      <a href="./index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="./images/logo_icon.svg"
+          alt="" class="nav-logo"></a>
+      <nav role="navigation" class="nav-menu w-nav-menu">
+        <a href="about.html" class="nav-link w-inline-block">
+          <div class="nav-link-text">About</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
-        <nav role="navigation" class="nav-menu w-nav-menu">
-          <a href="projects.html" class="nav-link w-inline-block">
-            <div class="nav-link-text">Artworks</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
-          </a>
-          <a href="blog.html" class="nav-link w-inline-block">
-            <div class="nav-link-text">Blog</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
-          </a>
-          <a href="about.html" aria-current="page" class="nav-link w-inline-block w--current">
-            <div class="nav-link-text">About</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
-          </a>
-          <a href="contact.html" class="nav-link w-inline-block">
-            <div class="nav-link-text">Contact</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
-          </a>
-        </nav>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon-black.svg" loading="lazy" alt=""></div>
-      </div>
-      <div class="nav-bg-white"></div>
+        <a href="contact.html" aria-current="page" class="nav-link w-inline-block w--current">
+          <div class="nav-link-text">Contact</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
+        </a>
+        <a href="case-studies/rarety.html" aria-current="page" class="nav-link w-inline-block w--current">
+          <div class="nav-link-text">Case Studies</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
+        </a>
+      </nav>
+      <div class="menu-button w-nav-button"><img src="images/menu-icon-black.svg" loading="lazy" alt=""></div>
     </div>
+    <div class="nav-bg-white"></div>
+  </div>
     <div class="section">
       <div class="horizontal-scroller hero">
         <div data-w-id="2797be1f-952f-d3cc-cf52-5041c8f40593" class="horizontal-scroll-track">
@@ -70,10 +66,18 @@
         </div>
       </div>
     </div>
-    <img src="./images/IMG_3309-2.JPG"
+    <!-- HERO IMG -->
+    <div class="hero-container">
+      <img src="./images/IMG_3309-2.JPG"
       sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw"
       srcset="images/IMG_3309-2-p-1080.jpeg 1080w"
       alt="" class="hero-picture" />
+      <div class="resume-cta-container">
+        <h5>Check out my resume</h5>
+        <a target="_blank" href="Marquis_Whaley_Resume.pdf">DOWNLOAD RESUME</a>
+      </div>
+    </div>
+
     <div class="section">
       <div class="container">
         <h3 data-w-id="bf21f31c-5b60-a9e6-c0f4-7018620aa09c" style="opacity:0;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)">My name is Marquis Whaley, I’m a Creative Designer proficient in Adobe design programs, Sketch, and Figma. I have 10 years of experience in Adobe design programs, which allowed me to develop my Photography, Design, and Content Creation skills. I also have a strong background in Digital Photography.
@@ -158,8 +162,8 @@
           </div>
           <div id="w-node-_418bb44c-4439-0238-84f8-29dd865eae78-2c34ab2d" class="instagram-grid-content">
             <div data-w-id="418bb44c-4439-0238-84f8-29dd865eae64" class="insta-text-container">
-              <a href="https://instagram.com/azwedocom" target="_blank" class="link w-inline-block">
-                <h5 class="white-50">@mrqs</h5>
+              <a href="https://www.instagram.com/mrqs.design" target="_blank" class="link w-inline-block">
+                <h5 class="white-50">@mrqs.design</h5>
                 <div class="link-underline white"></div>
               </a>
               <h3 class="white">Here are some of my instagram <br>“bangers”</h3>
