--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html data-wf-page="605ba11a3c65b4278f34ab32" data-wf-site="605ba1193c65b44e9f34ab13">
 <head>
   <meta charset="utf-8">
-  <title>ingenium - Webflow HTML website template</title>
+  <title>Marquis Whaley | Contact</title>
   <meta content="ingenium - Webflow HTML website template" name="description">
   <meta content="ingenium - Webflow HTML website template" property="og:title">
   <meta content="ingenium - Webflow HTML website template" property="og:description">
@@ -25,23 +25,19 @@
 </head>
 <body>
   <div class="wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="fixed-nav w-nav">
+    <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="fixed-nav w-nav">
       <div class="container nav-container w-container">
-        <a href="index.html" class="brand no-padding w-nav-brand">
-          <div class="brand-pic black"></div>
-        </a>
+      <a href="./index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="./images/logo_icon.svg" alt=""
+          class="nav-logo"></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
-          <a href="projects.html" class="nav-link w-inline-block">
-            <div class="nav-link-text">Artworks</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
-          </a>
-          <a href="blog.html" class="nav-link w-inline-block">
-            <div class="nav-link-text">Blog</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
-          </a>
           <a href="about.html" class="nav-link w-inline-block">
             <div class="nav-link-text">About</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
           </a>
           <a href="contact.html" aria-current="page" class="nav-link w-inline-block w--current">
             <div class="nav-link-text">Contact</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
+          </a>
+          <a href="case-studies/rarety.html" aria-current="page" class="nav-link w-inline-block w--current">
+            <div class="nav-link-text">Case Studies</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
           </a>
         </nav>
         <div class="menu-button w-nav-button"><img src="images/menu-icon-black.svg" loading="lazy" alt=""></div>
@@ -87,132 +83,8 @@
         </section>
       </div>
     </div>
-    <div class="section">
-      <div class="container">
-        <h3 data-w-id="de92693f-5cd7-2490-e574-5df6f86f626e" class="change-color-black-white">My name is Marquis Whaley, I am a Creative Designer proficient in Adobe design programs, Sketch, and Figma. I have 10 years of experience in Adobe design programs, which allowed me to develop my Photography, Design, and Content Creation skills. I also have a strong background/interest in Digital Photography.</h3>
-        <div class="space-small"></div>
-        <div class="w-layout-grid grid-4">
-          <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6272-f86f626c" class="content">
-            <div class="w-layout-grid grid-4">
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6274-f86f626c" class="content">
-                <h6 data-w-id="de92693f-5cd7-2490-e574-5df6f86f6275">Education</h6>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6277-f86f626c" class="content center">
-                <p data-w-id="de92693f-5cd7-2490-e574-5df6f86f6278">2015 - 2020<br>Fifth Year</p>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f627c-f86f626c" class="content center">
-                <h4 data-w-id="de92693f-5cd7-2490-e574-5df6f86f627d" class="no-margin-top">HETIC</h4>
-              </div>
-            </div>
-          </div>
-          <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f627f-f86f626c" class="content">
-            <div class="w-layout-grid grid-4">
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6281-f86f626c" class="content">
-                <h6 data-w-id="de92693f-5cd7-2490-e574-5df6f86f6282">Experiences</h6>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6284-f86f626c" class="content center">
-                <p data-w-id="de92693f-5cd7-2490-e574-5df6f86f6285">2020<br>Product Designer</p>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6289-f86f626c" class="content center">
-                <h4 data-w-id="de92693f-5cd7-2490-e574-5df6f86f628a" class="no-margin-top">CodeLab</h4>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f628c-f86f626c" class="content center">
-                <p data-w-id="de92693f-5cd7-2490-e574-5df6f86f628d">2014-2019<br>Product Designer</p>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6291-f86f626c" class="content center">
-                <h4 data-w-id="de92693f-5cd7-2490-e574-5df6f86f6292" class="no-margin-top">Circle</h4>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6294-f86f626c" class="content center">
-                <p data-w-id="de92693f-5cd7-2490-e574-5df6f86f6295">2013<br>Digital Designer</p>
-              </div>
-              <div id="w-node-de92693f-5cd7-2490-e574-5df6f86f6299-f86f626c" class="content center">
-                <h4 data-w-id="de92693f-5cd7-2490-e574-5df6f86f629a" class="no-margin-top">HexaLab</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="footer">
-      <div class="section">
-        <div class="write-email-container">
-          <div class="write-email-content">
-            <h1 data-w-id="4e61a589-7fc2-d56d-ad8f-4913fbd96017" class="black-20">Work together?</h1>
-            <div class="span-space only-on-desktop"></div>
-            <a data-w-id="4e61a589-7fc2-d56d-ad8f-4913fbd96019" href="contact.html" aria-current="page" class="link w-inline-block w--current">
-              <h1>Write an email</h1>
-              <div class="underline-placeholder">
-                <div class="link-underline thick"></div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="container w-container">
-        <div class="w-layout-grid grid-6">
-          <div id="w-node-_99bc6bd0-837d-9882-425d-1889465cdbba-465cdbb7" class="flex-container">
-            <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbbb" href="https://www.linkedin.com/company/azwedo" target="_blank" class="link link-margin w-inline-block">
-              <div>Linkedin</div>
-              <div class="link-underline"></div>
-            </a>
-            <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbbf" href="http://twitter.com/azwedocom" target="_blank" class="link link-margin w-inline-block">
-              <div>Twitter</div>
-              <div class="link-underline"></div>
-            </a>
-            <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbc3" href="http://dribbble.com" target="_blank" class="link link-margin w-inline-block">
-              <div>Dribbble</div>
-              <div class="link-underline"></div>
-            </a>
-          </div>
-          <div id="w-node-_99bc6bd0-837d-9882-425d-1889465cdbc7-465cdbb7" class="content">
-            <div class="right-text">
-              <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbc9" href="mailto:hello@azwedo.com?subject=Ingenium%20Template" class="link w-inline-block">
-                <div>hello@website.com</div>
-                <div class="link-underline"></div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="footer-flex-container">
-          <div class="footer-flex-first">
-            <div data-w-id="85743820-c351-e018-a09c-9b7b76c518f3" class="content horizontal">
-              <div class="text-small">Made from </div>
-              <a href="http://azwedo.com/webflow" target="_blank" class="link footer-link w-inline-block">
-                <div>Azwedo</div>
-                <div class="link-underline"></div>
-              </a>
-              <div class="span-space"></div>
-            </div>
-            <div data-w-id="881c0b78-b38b-a076-e73a-5ef752c0cb92" class="content horizontal">
-              <div class="text-small">Powered by</div>
-              <a href="http://webflow.com" target="_blank" class="link footer-link w-inline-block">
-                <div>Webflow</div>
-                <div class="link-underline"></div>
-              </a>
-            </div>
-          </div>
-          <div class="content">
-            <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbd4" href="template/licensing.html" class="link footer-link mobile-no-padding-left w-inline-block">
-              <div>Licensing</div>
-              <div class="link-underline"></div>
-            </a>
-          </div>
-          <div class="content">
-            <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbd9" href="template/change-log.html" class="link footer-link mobile-no-padding-left w-inline-block">
-              <div>Change Log</div>
-              <div class="link-underline"></div>
-            </a>
-          </div>
-          <div class="content">
-            <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbde" href="template/style.html" class="link footer-link mobile-no-padding-left w-inline-block">
-              <div>Style Guide</div>
-              <div class="link-underline"></div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
+
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=605ba1193c65b44e9f34ab13" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
