--- a/index.html
+++ b/index.html
@@ -31,22 +31,20 @@
 <body>
   <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="fixed-nav w-nav">
     <div class="container nav-container w-container">
-      <a href="./index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="./images/logo_icon.svg" alt="" class="nav-logo"></a>
+      <a href="./index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="./images/logo_icon.svg"
+          alt="" class="nav-logo"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="./projects.html" class="nav-link w-inline-block">
-          <div class="nav-link-text">Artworks</div><img src="./images/nav-arrow-black.svg" alt="" class="nav-arrow">
+        <a href="about.html" class="nav-link w-inline-block">
+          <div class="nav-link-text">About</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
-        <a href="./blog.html" class="nav-link w-inline-block">
-          <div class="nav-link-text">Blog</div><img src="./images/nav-arrow-black.svg" alt="" class="nav-arrow">
+        <a href="contact.html" aria-current="page" class="nav-link w-inline-block w--current">
+          <div class="nav-link-text">Contact</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
-        <a href="./about.html" class="nav-link w-inline-block">
-          <div class="nav-link-text">About</div><img src="./images/nav-arrow-black.svg" alt="" class="nav-arrow">
-        </a>
-        <a href="./contact.html" class="nav-link w-inline-block">
-          <div class="nav-link-text">Contact</div><img src="./images/nav-arrow-black.svg" alt="" class="nav-arrow">
+        <a href="case-studies/rarety.html" aria-current="page" class="nav-link w-inline-block w--current">
+          <div class="nav-link-text">Case Studies</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
       </nav>
-      <div class="menu-button w-nav-button"><img src="./images/menu-icon-black.svg" loading="lazy" alt=""></div>
+      <div class="menu-button w-nav-button"><img src="images/menu-icon-black.svg" loading="lazy" alt=""></div>
     </div>
     <div class="nav-bg-white"></div>
   </div>
@@ -153,7 +151,7 @@
   </div>
   <div class="section">
     <div class="container">
-
+          <h5 style="text-align: center; margin: 1.9rem auto; font-weight: 500;">I've worked with</h5>
       <!-- NOTE: make divider even as viewport dimensions change. maybe group dividers and names? -->
       <!-- old shit: <h5 data-w-id="de92693f-5cd7-2490-e574-5df6f86f626e"> -->
         <div class="client-container">
@@ -244,29 +242,20 @@
     <div class="container w-container">
       <div class="w-layout-grid grid-6">
         <div id="w-node-_99bc6bd0-837d-9882-425d-1889465cdbba-465cdbb7" class="flex-container">
-          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbbb" href="https://www.linkedin.com/company/azwedo" target="_blank" class="link link-margin w-inline-block">
+          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbbb" href="https://www.linkedin.com/in/marquiswhaley/" target="_blank" class="link link-margin w-inline-block">
             <div>Linkedin</div>
             <div class="link-underline"></div>
           </a>
-          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbbf" href="http://twitter.com/azwedocom" target="_blank" class="link link-margin w-inline-block">
-            <div>Twitter</div>
+          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbbf" href="https://www.instagram.com/mrqs.design" target="_blank" class="link link-margin w-inline-block">
+            <div>Instagram</div>
             <div class="link-underline"></div>
           </a>
-          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbc3" href="http://dribbble.com" target="_blank" class="link link-margin w-inline-block">
+          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbc3" href="https://dribbble.com/mwhaley7" target="_blank" class="link link-margin w-inline-block">
             <div>Dribbble</div>
             <div class="link-underline"></div>
           </a>
         </div>
-        <div id="w-node-_99bc6bd0-837d-9882-425d-1889465cdbc7-465cdbb7" class="content">
-          <div class="right-text">
-            <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbc9" href="mailto:marquiswhaley@gmail.com" class="link w-inline-block">
-              <div>hello@website.com</div>
-              <div class="link-underline"></div>
-            </a>
-          </div>
-        </div>
       </div>
-     
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=605ba1193c65b44e9f34ab13" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
