changes for pictures

--- a/case-studies/rarety.html
+++ b/case-studies/rarety.html
@@ -145,6 +145,9 @@
                         </div>
                 </div>
 
+                <!-- PROTO GIF -->
+                <img class="gif" src="../images/hifi_proto.gif" alt="prototype gif"/>
+
                 <!-- DISCOVERY RESEARCH -->
 
                 <div class="center-blurb">
