add vdieo to about

--- a/about.html
+++ b/about.html
@@ -49,12 +49,21 @@
     </div>
     <div class="nav-bg-white"></div>
   </div>
-    <div class="section">
-      <div class="horizontal-scroller hero">
+  <div class="section">
+
+    <!-- VIDEO -->
+  <div class="about-video">
+    <iframe width="560" height="349" src="https://www.youtube-nocookie.com/embed/cgYVa_fdIVw?autoplay=1&modestbranding=1&controls=0" title="YouTube video player"
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+  </div>
+
+  <!-- Scroller -->
+      <div class="horizontal-scroller">
         <div data-w-id="2797be1f-952f-d3cc-cf52-5041c8f40593" class="horizontal-scroll-track">
-          <div class="horizontal-scroller-content">
+          <div class="horizontal-scroller-content no-padding-top">
             <div class="container">
-              <div class="scroller-track hero large">
+              <div class="scroller-track">
                 <div style="opacity:0;-webkit-transform:translate3d(0, 0, 0) scale3d(0.85, 0.85, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.85, 0.85, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.85, 0.85, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.85, 0.85, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="human-gif-anim"></div>
                 <div class="anim-on-load-container">
                   <div style="opacity:1;display:block" class="animonload-right"></div>
