added images to about

--- a/about.html
+++ b/about.html
@@ -79,8 +79,7 @@
     <div class="hero-container">
       <img src="./images/IMG_3309-2.JPG"
       sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw"
-      srcset="images/IMG_3309-2-p-1080.jpeg 1080w"
-      alt="" class="hero-picture" />
+      hero-picture" />
       <div class="resume-cta-container">
         <h5>Check out my resume</h5>
         <a target="_blank" href="Marquis_Whaley_Resume.pdf">DOWNLOAD RESUME</a>
@@ -127,12 +126,13 @@
         </div>
       </div>
     </div>
+    <!-- PHOTO GALLERY -->
     <div data-w-id="418bb44c-4439-0238-84f8-29dd865eae62" class="section instagram">
       <div style="-webkit-transform:translate3d(0, 30VH, 0) scale3d(0.75, 0.75, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30VH, 0) scale3d(0.75, 0.75, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30VH, 0) scale3d(0.75, 0.75, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30VH, 0) scale3d(0.75, 0.75, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="instagram-container">
         <div class="w-layout-grid instagram-grid">
           <div id="w-node-_50b51607-829b-abb6-529d-5019aeef85c3-2c34ab2d" class="instagram-grid-content">
             <div data-w-id="50b51607-829b-abb6-529d-5019aeef85c4" class="insta-content _1">
-              <div class="instagram-top-gradient"></div><img src="images/instagram1.jpg" loading="lazy" sizes="(max-width: 892px) 100vw, (max-width: 991px) 892px, 25vw" srcset="images/instagram1-p-500.jpeg 500w, images/instagram1.jpg 892w" alt="" class="instagram-image">
+              <div class="instagram-top-gradient"></div><img src="images/editorials/7537435744__mg_0224.JPG" loading="lazy" sizes="(max-width: 892px) 100vw, (max-width: 991px) 892px, 25vw" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">Second home</div>
               </div>
@@ -142,12 +142,12 @@
             <div class="insta-content _2">
               <div class="instagram-description">
                 <div class="white">#brand to be remembered</div>
-              </div><img src="images/instagram2.jpg" loading="lazy" sizes="(max-width: 892px) 100vw, (max-width: 991px) 892px, 25vw" srcset="images/instagram2-p-500.jpeg 500w, images/instagram2.jpg 892w" alt="" class="instagram-image">
+              </div><img src="images/editorials/_MG_0678-Edit.jpg" loading="lazy" sizes="(max-width: 892px) 100vw, (max-width: 991px) 892px, 25vw" alt="" class="instagram-image">
               <div class="instagram-top-gradient"></div>
             </div>
           </div>
           <div id="w-node-bbd11b33-41b2-46f5-245e-69190e8ef56c-2c34ab2d" class="instagram-grid-content">
-            <div class="insta-content _3"><img src="images/instagram3.jpg" loading="lazy" alt="" class="instagram-image">
+            <div class="insta-content _3"><img src="images/editorials/img_0026.JPG" loading="lazy" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">Taking a photo of my self</div>
               </div>
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div id="w-node-_9685f9d8-fd9b-b52f-bdf0-80f34f44c80c-2c34ab2d" class="instagram-grid-content">
-            <div class="insta-content _4"><img src="images/instagram4.jpg" loading="lazy" sizes="(max-width: 850px) 100vw, (max-width: 991px) 850px, 25vw" srcset="images/instagram4-p-800.jpeg 800w, images/instagram4.jpg 850w" alt="" class="instagram-image">
+            <div class="insta-content _4"><img src="images/editorials/IMG_0143-Edit.jpg" loading="lazy" sizes="(max-width: 850px) 100vw, (max-width: 991px) 850px, 25vw" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">Dark and Black</div>
               </div>
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div id="w-node-_2af06506-b9a3-e0d2-eb38-432559f10817-2c34ab2d" class="instagram-grid-content">
-            <div class="insta-content _5"><img src="images/instagram5.jpg" loading="lazy" alt="" class="instagram-image">
+            <div class="insta-content _5"><img src="images/editorials/IMG_0241.jpg" loading="lazy" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">Library of the city</div>
               </div>
@@ -171,22 +171,22 @@
           </div>
           <div id="w-node-_418bb44c-4439-0238-84f8-29dd865eae78-2c34ab2d" class="instagram-grid-content">
             <div data-w-id="418bb44c-4439-0238-84f8-29dd865eae64" class="insta-text-container">
-              <a href="https://www.instagram.com/mrqs.design" target="_blank" class="link w-inline-block">
-                <h5 class="white-50">@mrqs.design</h5>
+              <a href="https://www.mrqs.photo" target="_blank" class="link w-inline-block">
+                <h5 class="white-50">www.mrqs.photo</h5>
                 <div class="link-underline white"></div>
               </a>
               <h3 class="white">Here are some of my instagram <br>“bangers”</h3>
             </div>
           </div>
           <div id="w-node-f2680002-e7ab-73d5-0e09-743ca33aef6a-2c34ab2d" class="instagram-grid-content">
-            <div class="insta-content _6"><img src="images/instagram6.jpg" loading="lazy" sizes="(max-width: 508px) 100vw, (max-width: 991px) 508px, 25vw" srcset="images/instagram6-p-500.jpeg 500w, images/instagram6.jpg 508w" alt="" class="instagram-image">
+            <div class="insta-content _6"><img src="images/editorials/img_0388.JPG" loading="lazy" sizes="(max-width: 508px) 100vw, (max-width: 991px) 508px, 25vw" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">What a view</div>
               </div>
             </div>
           </div>
           <div id="w-node-ca50e3be-3535-6c25-f876-82ce14254ea4-2c34ab2d" class="instagram-grid-content vertical-top">
-            <div class="insta-content _7"><img src="images/instagram7.jpg" loading="lazy" alt="" class="instagram-image">
+            <div class="insta-content _7"><img src="images/editorials/IMG_0619.jpg" loading="lazy" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">Experience</div>
               </div>
@@ -194,7 +194,7 @@
             </div>
           </div>
           <div id="w-node-_5efeef61-8102-981c-8df2-b9f187b51055-2c34ab2d" class="instagram-grid-content vertical-top">
-            <div class="insta-content _8"><img src="images/instagram8.jpg" loading="lazy" alt="" class="instagram-image">
+            <div class="insta-content _8"><img src="images/editorials/IMG_3896.jpg" loading="lazy" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">Peaceful #peace #positive</div>
               </div>
@@ -202,7 +202,7 @@
             </div>
           </div>
           <div id="w-node-c71e9171-08a9-db7b-ee8b-d96ff14bc404-2c34ab2d" class="instagram-grid-content vertical-top">
-            <div class="insta-content _9"><img src="images/instagram9.jpg" loading="lazy" alt="" class="instagram-image">
+            <div class="insta-content _9"><img src="images/editorials/IMG_7588-Pano.jpg" loading="lazy" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">Me Riding</div>
               </div>
@@ -210,7 +210,7 @@
             </div>
           </div>
           <div id="w-node-_9ecb30ac-f93e-d2cb-81bd-06a6820c0fbf-2c34ab2d" class="instagram-grid-content vertical-top">
-            <div class="insta-content _10"><img src="images/instagram10.jpg" loading="lazy" sizes="(max-width: 728px) 100vw, (max-width: 991px) 728px, 25vw" srcset="images/instagram10-p-500.jpeg 500w, images/instagram10.jpg 728w" alt="" class="instagram-image">
+            <div class="insta-content _10"><img src="images/editorials/Photo Apr 11, 7 33 07 PM.jpg" loading="lazy" sizes="(max-width: 728px) 100vw, (max-width: 991px) 728px, 25vw" alt="" class="instagram-image">
               <div class="instagram-description">
                 <div class="white">My favorite instagram picture</div>
               </div>
