added images to about

--- a/about.html
+++ b/about.html
@@ -79,7 +79,8 @@
     <div class="hero-container">
       <img src="./images/IMG_3309-2.JPG"
       sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw"
-      hero-picture" />
+      srcset="images/IMG_3309-2-p-1080.jpeg 1080w"
+      alt="" class="hero-picture" />
       <div class="resume-cta-container">
         <h5>Check out my resume</h5>
         <a target="_blank" href="Marquis_Whaley_Resume.pdf">DOWNLOAD RESUME</a>
