changed gallery text

--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
                 <h5 class="white-50">www.mrqs.photo</h5>
                 <div class="link-underline white"></div>
               </a>
-              <h3 class="white">Here are some of my instagram <br>“bangers”</h3>
+              <h3 class="white">Check out my photography <br>portfolio</h3>
             </div>
           </div>
           <div id="w-node-f2680002-e7ab-73d5-0e09-743ca33aef6a-2c34ab2d" class="instagram-grid-content">
