changed dribbble link to creatively. changed hello in index to capital H

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div data-w-id="c50d35a4-afc5-52b4-4df2-051165d5d057" class="section-hero">
     <div class="container">
       <div style="opacity:0;-webkit-transform:translate3d(0, 40%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-hello-text">
-        <h1 class="hero-text">hello</h1>
+        <h1 class="hero-text">Hello</h1>
       </div>
       <div class="hero-text-container">
         <div class="w-layout-grid hero-grid">
@@ -94,8 +94,8 @@
             </a>
           </div>
           <div class="margin-right-20 social-link">
-            <a data-w-id="4ec821fc-24b1-ae8c-c6b8-790c1a67a126" href="https://dribbble.com/mwhaley7" target="_blank" class="link w-inline-block link-underline-animation">
-              <div>Dribbble</div>
+            <a data-w-id="4ec821fc-24b1-ae8c-c6b8-790c1a67a126" href="https://creatively.life/Mrqs.jpeg" target="_blank" class="link w-inline-block link-underline-animation">
+              <div>Creatively</div>
               <div class="link-underline underline-custom"></div>
             </a>
           </div>
@@ -250,8 +250,8 @@
             <div>Instagram</div>
             <div class="link-underline"></div>
           </a>
-          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbc3" href="https://dribbble.com/mwhaley7" target="_blank" class="link link-margin w-inline-block">
-            <div>Dribbble</div>
+          <a data-w-id="99bc6bd0-837d-9882-425d-1889465cdbc3" href="https://creatively.life/Mrqs.jpeg" target="_blank" class="link link-margin w-inline-block">
+            <div>Creatively</div>
             <div class="link-underline"></div>
           </a>
         </div>
