--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <div class="container nav-container w-container">
       <a href="./index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="./images/logo_icon.svg"
           alt="" class="nav-logo"></a>
-      <nav role="navigation" class="nav-menu w-nav-menu">
+      <nav role="navigation" class="nav-menu black w-nav-menu">
         <a href="about.html" class="nav-link w-inline-block">
           <div class="nav-link-text">About</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
@@ -45,7 +45,7 @@
           <div class="nav-link-text">Contact</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
       </nav>
-      <div class="menu-button w-nav-button"><img src="images/menu-icon-black.svg" loading="lazy" alt=""></div>
+      <div class="menu-button w-nav-button"><img src="images/menu-icon-white.svg" loading="lazy" alt=""></div>
     </div>
     <div class="nav-bg-white"></div>
   </div>
