--- a/case-studies/rarety.html
+++ b/case-studies/rarety.html
@@ -43,7 +43,7 @@
         <div class="container nav-container w-container">
             <a href="../index.html" aria-current="page" class="brand w-nav-brand w--current"><img
                     src="../images/logo_icon.svg" alt="" class="nav-logo"></a>
-            <nav role="navigation" class="nav-menu w-nav-menu">
+            <nav role="navigation" class="nav-menu black w-nav-menu">
                 <a href="../about.html" class="nav-link w-inline-block">
                     <div class="nav-link-text">About</div><img src="../images/nav-arrow-black.svg" alt="" class="nav-arrow">
                 </a>
@@ -55,7 +55,7 @@
                     <div class="nav-link-text">Contact</div><img src="../images/nav-arrow-black.svg" alt="" class="nav-arrow">
                 </a>
             </nav>
-            <div class="menu-button w-nav-button"><img src="images/menu-icon-black.svg" loading="lazy" alt=""></div>
+            <div class="menu-button w-nav-button"><img src="./../images/menu-icon-white.svg" loading="lazy" alt=""></div>
         </div>
         <div class="nav-bg-white"></div>
     </div>
@@ -86,13 +86,13 @@
                     </div>
                 </div>
                 <div class="arrow-down-container center"><img
-                        src="https://uploads-ssl.webflow.com/605ba1193c65b44e9f34ab13/605ba11a3c65b4abac34ab61_arrow-big-down.svg"
+                        src="./../images/arrow-big-down.svg"
                         loading="lazy"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         alt="" class="arrow-down-image"></div>
             </div>
             <div class="background-black"></div>
-            <div style="background-image: url(&quot;https://uploads-ssl.webflow.com/605ba11a3c65b4b56b34ab37/605ba11a3c65b43c3d34ab9d_the-creative-exchange-header.jpg&quot;); filter: blur(0px); opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+            <div style="background-image: url(&quot;./../images/rarety-hero.png&quot;); filter: blur(0px); opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                 class="hero-image-background">
                 <div class="image-overlay"></div>
             </div>
