change large text to black only. move about vid down and add controls

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="hero-white-text"><img src="./images/artworkme.png" style="opacity:0;-webkit-transform:translate3d(20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 1279px) 96vw, (max-width: 1439px) 1240px, 1400px" alt="" class="hero-picture" />
               <div style="opacity:0;-webkit-transform:translate3d(0, 30%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-text-content">
-                <h1 class="hero-text white-text">I&#x27;m Mrqs</h1>
+                <h1 class="hero-text">I&#x27;m Mrqs</h1>
               </div>
             </div>
           </div>
